Fix spacing on download options

--- a/_sass/_download-options.scss
+++ b/_sass/_download-options.scss
@@ -1,6 +1,5 @@
 .download-options__container {
-  margin-top: 5em;
-  margin-bottom: 8em;
+  margin-bottom: 15em;
 }
 
 .download-options__link {
